🚀 Fix webhook 404 & stable dual-bot start